<resources>
    <string name="app_name">Almalzma</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_weeks">Weeks</string>
    <string name="title_activity_weed_details">WeedDetails</string>
    <string name="title_activity_subject">Subject</string>
    <string name="title_activity_data">Data</string>

    <string name="email">Please enter your E-mail</string>
    <string name="name">Please enter your Name</string>
    <string name="password">Please enter your password</string>
    <string name="password_confirm">Please confirm your password</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>


    <string name="grade_select_message">Please choose your grade</string>
    <string name="department_select_message">Please choose your Department</string>
    <string name="logout">Log out</string>
    <string name="password_not_match_error_message">Password not matching</string>


    <!--title of the SubjectActivity tabs-->
    <string name="title_section1">Lectures</string>
    <string name="title_section2">Sections</string>
    <string name="title_section3">Announcements</string>

    <!-- FloatButtons labels and Dialogs-->
    <string name="label_doctor_quote">Doctor quote</string>
    <string name="doctor_quote_dialog_input">Doctor quote</string>
    <string name="doctor_quote_dialog_content">What did the doctor said?</string>
    <string name="doctor_quote_dialog_hint">the quote</string>

    <string name="label_important_link">important Link</string>
    <string name="important_link">Important link</string>
    <string name="important_link_dialog_input">Important link</string>
    <string name="important_link_dialog_hint">The link</string>
    <string name="description">The description</string>
    <string name="add">ADD</string>


    <string name="label_lecture_link">Lecture Link</string>
    <string name="lecture_link">Lecture link</string>
    <string name="lecture_link_dialog_input">Lecture link</string>
    <string name="lecture_link_dialog_content">What is the lecture PDF link?</string>
    <string name="lecture_link_dialog_hint">the link</string>

    <string name="label_section_link">Section Link</string>

    <string name="choose">CHOOSE</string>

    <string name="label_lecture_pdf_file">Lecture PDF file</string>

    <string name="label_section_pdf_file">Section PDF file</string>


    <string name="add_success_message">Add success</string>


    <!--Empty and error messages-->
    <string name="coming_soon_message">Coming soon</string>
    <string name="no_announcements_message">No announcements</string>
    <string name="no_lectures_message">No lectures</string>
    <string name="no_sections_message">No sections</string>
    <string name="loading">Loading…</string>
    <string name="unexpected_error">Sorry un expected error</string>
    <string name="connection_error">Please check your connection</string>
    <string name="generic_error_title">Oooops…</string>
    <string name="signup_error_message">Please fill the empty fields</string>
    <string name="wrong_uri_error_title">Oooops…</string>
    <string name="wrong_uri_error_message">Wrong link please make sure you enter correct link.</string>
    <string name="wrong_link_error_message">Wrong Link</string>
    <string name="link_helper_text">Enter the Link</string>


    <string-array name="departments">
        <item>Prep</item>
        <item>Systems and computer engineering</item>
        <item>Petrol engineering</item>
        <item>Electrical engineering</item>
        <item>Architecture engineering</item>
        <item>Civil engineering</item>
        <item>Mechanical engineering</item>
        <item>Urban design engineering</item>
    </string-array>

    <string-array name="grades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string-array name="weeks">
        <item>week 1</item>
        <item>week 2</item>
        <item>week 3</item>
        <item>week 4</item>
        <item>week 5</item>
        <item>week 6</item>
        <item>week 7</item>
        <item>week 8</item>
        <item>week 9</item>
        <item>week 10</item>
        <item>week 11</item>
        <item>week 12</item>
        <item>week 13</item>
        <item>week 14</item>
        <item>week 15</item>
        <item>week 16</item>
        <item>week 17</item>
        <item>week 18</item>
        <item>week 19</item>
        <item>week 20</item>
        <item>week 21</item>
        <item>week 22</item>
        <item>week 23</item>
        <item>week 24</item>
        <item>week 25</item>
    </string-array>

</resources>
