<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.huma.almalzma.subject.AnnouncementsFragment">

    <TextView
        android:id="@+id/empty_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_announcements_message" />

    <ListView
        android:id="@+id/announcements_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/float_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/quote_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_format_quote_white"
            fab:fab_label="@string/label_doctor_quote"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/link_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insert_link_white"
            fab:fab_label="@string/label_important_link"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/event_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            fab:fab_label="Menu item 1"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <com.mingle.widget.LoadingView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />


</FrameLayout>
